# punjabitrans

./: .gitignore  .replit  Dockerfile  app.py  apprunner.yaml  cloudbuild.yaml  deployment_app.py  ocr_processor.py  packages.txt  pdf_handler.py  pyproject.toml  render.yaml  requirements.txt  start_app.py  translator.py
.streamlit/: config.toml
attached_assets/: Polling Station Details (001 - Sujanpur Constituency).xlsx
